@@ -24,6 +24,9 @@
          * @property {Integer}  tickSize        The length of axis ticks, in pixels.
          * @property {Integer}  tickPadding     The distance between the end of axis tick marks and tick labels, in pixels.
          *
+         * @property {Integer}  tickLineWidth   The width of the tick marks, in pixels.
+         * @property {Integer}  tickLineColor   The color of the tick marks.
+         *
          * @property {Integer}  axisLineWidth   The width of the axis line, in pixels.
          * @property {Integer}  axisLineColor   The color of an axis line.
          *
@@ -41,6 +44,9 @@
 
             tickSize: undefined,
             tickPadding: undefined,
+
+            tickLineWidth: undefined,
+            tickLineColor: undefined,
 
             axisLineWidth: undefined,
             axisLineColor: undefined,
